--- a/src/main/webapp/mjolnir.css
+++ b/src/main/webapp/mjolnir.css
@@ -1,9 +1,9 @@
 h1 {
-    font-size: 2em;
+
+}
+
+a.active {
     font-weight: bold;
-    color: #4169e1;
-    margin: 40px 0px 70px;
-    text-align: center;
 }
 
 .sendButton {
@@ -27,4 +27,12 @@ h1 {
 /** Set ids using widget.getElement().setId("idOfElement") */
 #closeButton {
     margin: 15px 6px 6px;
+}
+
+#loading-panel {
+    height: 100%;
+}
+
+#login-panel {
+    margin: 5em auto;
 }
