--- a/src/main/webapp/mjolnir.css
+++ b/src/main/webapp/mjolnir.css
@@ -14,21 +14,16 @@ a.active {
     box-shadow: 0px 0px 5px 5px #999;
 }
 
-.gwt-DialogBox {
-    width: 400px;
+.menuPanel a {
+    display: block;
+    padding: 1em;
+    border-bottom: 0 1px 1px 1px solid #bbb;
+    background: #ddd;
 }
 
-.dialogVPanel {
-    margin: 5px;
-}
-
-.serverResponseLabelError {
-    color: red;
-}
-
-/** Set ids using widget.getElement().setId("idOfElement") */
-#closeButton {
-    margin: 15px 6px 6px;
+.menuPanel a.active {
+    background: white;
+    border-right: 0;
 }
 
 #loading-panel {
