--- a/src/main/webapp/mjolnir.css
+++ b/src/main/webapp/mjolnir.css
@@ -1,8 +1,28 @@
 h1 {
 }
 
-a.active {
-    font-weight: bold;
+.menuPanel a {
+    display: block;
+    padding: 5px 0 5px 20px;
+    margin: 10px 0 10px 20px;
+    background: white;
+    color: black;
+}
+.menuPanel a.active, .menuPanel a:hover {
+    background: #eee;
+    text-decoration: none;
+    color: black;
+}
+.menuPanel .heading {
+    padding: 10px;
+    background: rgb(252,255,244);
+    background: linear-gradient(#F9F9F9, #EEE);
+    border: 1px 0 solid #CFCFCF;
+    color: #555;
+}
+
+table button {
+    padding: 0;
 }
 
 .sendButton {
@@ -10,20 +30,30 @@ a.active {
     font-size: 16pt;
 }
 
+.padding {
+    padding: 0 1em;
+}
+
+.lightText {
+    color: #999;
+}
+
+.strongText {
+    font-weight: bold;
+}
+
+.textRight {
+    text-align: right;
+}
+
 .contentBox {
     box-shadow: 0px 0px 5px 5px #999;
 }
 
-.menuPanel a {
-    display: block;
-    padding: 1em;
-    border-bottom: 0 1px 1px 1px solid #bbb;
-    background: #ddd;
-}
-
-.menuPanel a.active {
-    background: white;
-    border-right: 0;
+.clear {
+    font-size: 0;
+    height: 0;
+    clear: both;
 }
 
 #loading-panel {
