unsubscribing users from organization
- added button to unsubscribe user from organization (only on "GitHub
  Organization Members" page)
- option to filter users by whether they have valid krb account
- error dialog can show a stack trace

--- a/src/main/webapp/mjolnir.css
+++ b/src/main/webapp/mjolnir.css
@@ -23,6 +23,10 @@ h1 {
 
 table button {
     padding: 0;
+    margin: 0 1px;
+}
+table th input[type=text] {
+    width: 100px;
 }
 
 .sendButton {
