SET-170 Highlight selection tables so that's it's clear they are clickable

--- a/src/main/java/org/jboss/set/mjolnir/client/component/table/DefaultCellTable.css
+++ b/src/main/java/org/jboss/set/mjolnir/client/component/table/DefaultCellTable.css
@@ -40,6 +40,6 @@
 }
 
 .cellTableSelectedRow, .cellTableKeyboardSelectedRow {
-    background: #eaf5fb;
+    background: #F9DBDB;
     color: #4e5255;
 }
