SET-172 Adding note field to RegisteredUser
- adding new dialog for editting user and his subscriptions at the same time.

--- a/src/main/webapp/mjolnir.css
+++ b/src/main/webapp/mjolnir.css
@@ -93,3 +93,24 @@ table th input[type=text] {
     background: #eee;
     text-decoration: none;
 }
+
+
+.form .row {
+    clear: both;
+    padding: 5px 0;
+}
+.form .label {
+    width: 100px;
+    float: left;
+    clear: both;
+}
+.form .help-text {
+    color: #aaa;
+}
+.form .help-link {
+    padding-left: 5px;
+}
+
+.error {
+    color: red;
+}
